--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
                               </div>
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="resume__block">
+                          <div class="skills">
+                            <h3 class="skills__header">Skills</h3>
+                            <p class="skills__text">
+                                - HTML5, CSS3, SCSS, SASS, Bootstrap;<br>
+                                - JavaScript (ES6+), React/Redux, Node.js, jQuery, Rest API;<br>
+                                - SQL, PostgreSQL;<br>
+                                - SOLID, algorithms and cycles;<br>
+                                - BEM (block, element, modifier);<br>
+                                - Git, GitHub. <br>
+                                 </p>
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
