--- a/index.html
+++ b/index.html
@@ -49,39 +49,92 @@
                             </a>
                             <div class="container">
                                 <div class="resume__block">
-                                  <div class="intro">
-                                    <div class="intro__icon-wrapper">
-                                      <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                        <path
-                                          d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
-                                        </path>
-                                      </svg>
+                                    <div class="intro">
+                                        <div class="intro__icon-wrapper">
+                                            <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg"
+                                                viewBox="0 0 512 512">
+                                                <path
+                                                    d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <p class="intro_text">Hey, I’m Aleksey, an ambitious and talented front-end
+                                            developer with a great passion for work and productivity. Always excited to
+                                            work on new projects and with new people
+                                        </p>
                                     </div>
-                                    <p class="intro_text">Hello.
-                                      I am a Front-End developer.
-                                    </p>
-                                  </div>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                     </div>
                     <div class="container">
                         <div class="resume__block">
-                          <div class="skills">
-                            <h3 class="skills__header">Skills</h3>
-                            <p class="skills__text">
-                                - HTML5, CSS3, SCSS, SASS, Bootstrap;<br>
-                                - JavaScript (ES6+), React/Redux, Node.js, jQuery, Rest API;<br>
-                                - SQL, PostgreSQL;<br>
-                                - SOLID, algorithms and cycles;<br>
-                                - BEM (block, element, modifier);<br>
-                                - Git, GitHub. <br>
-                                 </p>
-                          </div>
+                            <div class="skills">
+                                <h3 class="skills__header">Skills</h3>
+                                <p class="skills__text">
+                                    - HTML5, CSS3, SCSS, SASS, Bootstrap;<br>
+                                    - JavaScript (ES6+), React/Redux, Node.js, jQuery, Rest API;<br>
+                                    - SQL, PostgreSQL;<br>
+                                    - SOLID, algorithms and cycles;<br>
+                                    - BEM (block, element, modifier);<br>
+                                    - Git, GitHub. <br>
+                                </p>
+                            </div>
                         </div>
-                      </div>
+                    </div>
+                
+                    <div class="experiences">
+                        <h3 class="experiences__header">Experience</h3>
+                        <div class="experiences__company">
+                            <div class="experiences__company-header">
+                                <span class="experiences__company-header-durability"></span>
+                                <h3 class="experiences__company-header-name"></h3>
+                            </div>
+
+                            <div class="experiences__company-project">
+                                <span class="experiences__company-project-role"></span>
+                                <h3 class="experiences__company-project-name">Education</h3>
+                                <ul class="experiences__company-project-responsibilities">
+                                    <li>
+                                        2014 Kharkiv National Automobile and Highway University, Faculty of Automobile,
+                                        Specialized in «Vehicles and Vehicle Management», Master Degree
+                                    </li>
+                                    <li>2020 State Higher Educational Institution «Donbas State Pedagogical University»,
+                                        Faculty
+                                        of Psychology, Specialized in «Psychology», Master Degree
+                                    </li>
+                                    <li>
+                                        01.2019 – 06.2019 Beetroot Academy «Front-End Course»</li>
+                                    <li>07.2019 – 11.2019 Beetroot Academy «Advanced JavaScript Course»</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="additional-info__languages">
+                        <h3 class="additional-info__languages-header">Languages</h3>
+                        <p class="additional-info__languages-item">
+                            Ukrainian: Native
+                        </p>
+                        <p class="additional-info__languages-item">
+                            English: Intermediate
+                        </p>
+                        <p class="additional-info__languages-item">
+                            Russian: Native
+                        </p>
+                    </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="resume__block">
+                    <div class="main-info fh">
+
+                        <div class="experiences">I usually meet deadlines, but not today:( But i can make it better </div>
+
+                        <div class="additional-info fv"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
 </body>
